create tests for CarAssemblyProcess